# ExpendiForge

./: README.md  app.py  config.py  main.py  models.py  package-lock.json  pyproject.toml  replit.md  routes.py
attached_assets/: Pasted-Prompt-for-Replit-AI-Code-Generation-Create-a-complete-full-stack-web-application-in-Replit-called--1761207994145_1761207994146.txt
docs/: architecture.md  installation.md  usage.md
instance/: expendiforge.db
templates/: base.html  dashboard.html  dev_home.html  login.html  register.html  upload.html
